# py_motd

./: config.yaml  flake.nix  pyproject.toml
.github/workflows/: flake-check.yaml
nix/: devshell.nix  package.nix
nix/modules/home/: py-motd.nix  py_motd.nix
nix/modules/nixos/: py-backup.nix  sops-podman.nix
py_backup/: Snapshot.py  __main__.py
py_motd/: __main__.py
py_motd/modules/: backup.py  update.py
sops-podman/: __main__.py
sops_podman/: __main__.py
